# avro-schema-converter

./: .gitignore  README.md  json_in_avro.avro  json_to_avro_schema.py  program.py  pyproject.toml  test.avsc  test.json  weatherforecast.avsc
