[tool.poetry]
name = "structtype-json"
version = "0.1.0"
description = ""
authors = ["Arjan Hulshoff <arjan.hulshoff@ah-consultancy.net>"]
readme = "README.md"
packages = [{include = "structtype_json"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
icecream = "^2.1.3"
avro = "^1.11.3"
fastavro = "^1.9.3"
rec-avro = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
